linux_story/gtk3/css/style.css
/*
# style.css
#
# Copyright (C) 2014-2016 Kano Computing Ltd.
# License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPL v2
#
# This controls the styling of the MultilineEntry custom widget.
*/


 * {
 	/* Remove annoying focus borders around buttons */
	-GtkWidget-focus-line-width: 0px;
}

.normal.main_window {
	background: @story_background;
}

.dark.main_window {
	background: @dark_story_background;
}

.normal .terminal_background {
	background: @terminal_background;
}

.dark .terminal_background {
	background: @dark_terminal_background;
}

.normal.story_background {
	background: @story_background;
}

.dark.story_background {
    background: @dark_story_background;
}

.normal .spell_icon_background {
	background: @spell_icon_background;
}

.dark .spell_icon_background {
	background: @dark_spell_icon_background;
}

.normal .spell_icon_background.locked {
	background: @spell_icon_background_locked;
}

.dark .spell_icon_background.locked {
	background: @dark_spell_icon_background_locked;
}

.normal .spell_label_background {
	background: @spell_label_background;
}

.dark .spell_label_background {
	background: @dark_spell_label_background;
}

.normal .spell_label_background.locked {
	background: @spell_label_background_locked;
}

.dark .spell_label_background.locked {
	background: @dark_spell_label_background_locked;
}

.tooltip {
    border-width: 3px;
    border-radius: 0px;
    color: #ffffff;
    font: monospace 10px;
}

.normal.tooltip {
    background: @spell_tooltip_background;
    border-color: @spell_tooltip_border;
}

.dark.tooltip {
    background: @dark_spell_tooltip_background;
    border-color: @dark_spell_tooltip_border;
}

.spell_label {
	color: #cccccc;
	font: Bariol 13px;
}

.spell_command {
	color: #ffffff;
	font: Bariol Bold 17px;
}

.normal.spellbook_background, .normal. spellbook_background {
	background: @spellbook_background;
}

.dark.spellbook_background, .dark .spellbook_background {
	background: @dark_spellbook_background;
}

.caps_lock_warning {
    color: #ffffff;
    font: Bariol 14px;
}

.normal .caps_lock_warning {
    background: @caps_lock_warning_background;
}

.dark .caps_lock_warning {
    background: @dark_caps_lock_warning_background;
}

.menu_background {
	background: @spellbook_background;
	border-style: solid;
	border-radius: 3px;
	border-width: 5px;
}

.menu_title {
	color: #ffffff;
	font: Bariol Bold 20;
}

.menu_description {
	color: #ffffff;
	font: Bariol Bold 16;
}

.info_title {
	/* Currently a repeat of the menu title styling */
	color: #ffffff;
	font: Bariol Bold 20;
}

.info_description {
	/* Currently a repeat of the menu description styling */
	color: #ffffff;
	font: Bariol Bold 16;
}

.menu_button {
	background: @spell_icon_background;
	font: Bariol bold 14;
	border-style: solid;
	border-color: transparent;
	border-width: 5px;
	border-radius: 2px;
    box-shadow: none;
}

.menu_button GtkLabel {
	color: #ffffff;
}

/*********** Focus styling *********/
.menu_button:focus, .menu_button:hover  {
	border-color: #B1B3C9;
	border-width: 5px;
	border-style: solid;
	border-radius: 2px;
}

.menu_button:insensitive {
	background: @spell_icon_background_locked;
}

.menu_button GtkLabel:insensitive {
	color: @spell_label_background_locked;
	background: transparent;
}

.normal .storybook_background, .normal.storybook_background {
    background: @story_background;
}

.dark .storybook_background, .dark.storybook_background {
    background: @dark_story_background;
}

